@@ -11,9 +11,10 @@ REST API
 
 * API version upgraded to 20
 * New URIs "/.../{id}/labels/{label}" to test/set/remove labels
-* "/tools/find" accepts the "Labels" and "LabelsConstraint" arguments
 * "/patients/{id}", "/studies/{id}", "/series/{id}" and "/instances/{id}"
   contain the "Labels" field
+* "/tools/find" now accepts the "Labels" and "LabelsConstraint" arguments
+* "/tools/labels" lists all the labels that are associated with any resource
 * "/system": added "UserMetadata" and "HasLabels"
 
 Plugins
